Added VectorUtils and StringAccessUtils. Added ticket and project plan documentation. Updated src files to use new utility classes.